# psysicks

./: .clang-format  .gitignore  .gitmodules  .vimlocal  .vimspector.json  135  CMakeLists.txt  TODO.md  headergen  map.glb  untitled.glb
fem/: CMakeLists.txt  fft.c  physics.c  sparsemat.c
fonts/Roboto/: LICENSE.txt
parser/: CMakeLists.txt  main.c
plotter/: CMakeLists.txt  fpsutil.c  fpsutil.h  gl.h  graphics.c  graphics.h  main.c  plotutil.c  plotutil.h
plotter/shaders/: ao.frag  arrow.frag  arrow.vert  billboard.vert  fill.vert  height.frag  pbr.frag  pbr.vert  pos.vert  postprocess3d.frag  ssr.frag  tex.frag  tex3d.vert  txt.frag
samples/: em.json
shaders/: .ssr.frag.swp  ao.frag  boxfilter.frag  boxfilter.vert  cubemap.frag  cubemap.vert  fill.frag  pbr.frag  pbr.vert  postprocess3d.frag  shadow.frag  shadow.vert  ssr.frag  tex.frag  tex.vert  tex3d.frag  txt.vert
src/: fpsutil.c  fpsutil.h  graphics.c  graphics.h  main.c  physics.c  util_main.c
